Poprawa bazy danych / haszowanie

--- a/src/java/Bundle.properties
+++ b/src/java/Bundle.properties
@@ -103,6 +103,9 @@ CreateBudynekTitle_id=Id
 CreateBudynekLabel_adres=Adres:
 CreateBudynekRequiredMessage_adres=The Adres field is required.
 CreateBudynekTitle_adres=Adres
+CreateBudynekLabel_iloscMieszkan=IloscMieszkan:
+CreateBudynekRequiredMessage_iloscMieszkan=The IloscMieszkan field is required.
+CreateBudynekTitle_iloscMieszkan=IloscMieszkan
 EditBudynekTitle=Edit Budynek
 EditBudynekSaveLink=Save
 EditBudynekViewLink=View
@@ -114,6 +117,9 @@ EditBudynekTitle_id=Id
 EditBudynekLabel_adres=Adres:
 EditBudynekRequiredMessage_adres=The Adres field is required.
 EditBudynekTitle_adres=Adres
+EditBudynekLabel_iloscMieszkan=IloscMieszkan:
+EditBudynekRequiredMessage_iloscMieszkan=The IloscMieszkan field is required.
+EditBudynekTitle_iloscMieszkan=IloscMieszkan
 ViewBudynekTitle=View
 ViewBudynekDestroyLink=Destroy
 ViewBudynekEditLink=Edit
@@ -124,6 +130,8 @@ ViewBudynekLabel_id=Id:
 ViewBudynekTitle_id=Id
 ViewBudynekLabel_adres=Adres:
 ViewBudynekTitle_adres=Adres
+ViewBudynekLabel_iloscMieszkan=IloscMieszkan:
+ViewBudynekTitle_iloscMieszkan=IloscMieszkan
 ListBudynekTitle=List
 ListBudynekEmpty=(No Budynek Items Found)
 ListBudynekDestroyLink=Destroy
@@ -133,6 +141,7 @@ ListBudynekCreateLink=Create New Budynek
 ListBudynekIndexLink=Index
 ListBudynekTitle_id=Id
 ListBudynekTitle_adres=Adres
+ListBudynekTitle_iloscMieszkan=IloscMieszkan
 InformacjeCreated=Informacje was successfully created.
 InformacjeUpdated=Informacje was successfully updated.
 InformacjeDeleted=Informacje was successfully deleted.
@@ -219,6 +228,12 @@ CreateLokatorTitle_aktywne=Aktywne
 CreateLokatorLabel_mieszkanieId=MieszkanieId:
 CreateLokatorRequiredMessage_mieszkanieId=The MieszkanieId field is required.
 CreateLokatorTitle_mieszkanieId=MieszkanieId
+CreateLokatorLabel_imie=Imie:
+CreateLokatorRequiredMessage_imie=The Imie field is required.
+CreateLokatorTitle_imie=Imie
+CreateLokatorLabel_nazwisko=Nazwisko:
+CreateLokatorRequiredMessage_nazwisko=The Nazwisko field is required.
+CreateLokatorTitle_nazwisko=Nazwisko
 EditLokatorTitle=Edit Lokator
 EditLokatorSaveLink=Save
 EditLokatorViewLink=View
@@ -242,6 +257,12 @@ EditLokatorTitle_aktywne=Aktywne
 EditLokatorLabel_mieszkanieId=MieszkanieId:
 EditLokatorRequiredMessage_mieszkanieId=The MieszkanieId field is required.
 EditLokatorTitle_mieszkanieId=MieszkanieId
+EditLokatorLabel_imie=Imie:
+EditLokatorRequiredMessage_imie=The Imie field is required.
+EditLokatorTitle_imie=Imie
+EditLokatorLabel_nazwisko=Nazwisko:
+EditLokatorRequiredMessage_nazwisko=The Nazwisko field is required.
+EditLokatorTitle_nazwisko=Nazwisko
 ViewLokatorTitle=View
 ViewLokatorDestroyLink=Destroy
 ViewLokatorEditLink=Edit
@@ -260,6 +281,10 @@ ViewLokatorLabel_aktywne=Aktywne:
 ViewLokatorTitle_aktywne=Aktywne
 ViewLokatorLabel_mieszkanieId=MieszkanieId:
 ViewLokatorTitle_mieszkanieId=MieszkanieId
+ViewLokatorLabel_imie=Imie:
+ViewLokatorTitle_imie=Imie
+ViewLokatorLabel_nazwisko=Nazwisko:
+ViewLokatorTitle_nazwisko=Nazwisko
 ListLokatorTitle=List
 ListLokatorEmpty=(No Lokator Items Found)
 ListLokatorDestroyLink=Destroy
@@ -273,6 +298,8 @@ ListLokatorTitle_haslo=Haslo
 ListLokatorTitle_kontakt=Kontakt
 ListLokatorTitle_aktywne=Aktywne
 ListLokatorTitle_mieszkanieId=MieszkanieId
+ListLokatorTitle_imie=Imie
+ListLokatorTitle_nazwisko=Nazwisko
 MieszkanieCreated=Mieszkanie was successfully created.
 MieszkanieUpdated=Mieszkanie was successfully updated.
 MieszkanieDeleted=Mieszkanie was successfully deleted.
@@ -426,6 +453,11 @@ CreateWlascicielTitle_kontakt=Kontakt
 CreateWlascicielLabel_budynekId=BudynekId:
 CreateWlascicielRequiredMessage_budynekId=The BudynekId field is required.
 CreateWlascicielTitle_budynekId=BudynekId
+CreateWlascicielLabel_imie=Imie:
+CreateWlascicielRequiredMessage_imie=The Imie field is required.
+CreateWlascicielTitle_imie=Imie
+CreateWlascicielLabel_nazwisko=Nazwisko:
+CreateWlascicielTitle_nazwisko=Nazwisko
 EditWlascicielTitle=Edit Wlasciciel
 EditWlascicielSaveLink=Save
 EditWlascicielViewLink=View
@@ -446,6 +478,11 @@ EditWlascicielTitle_kontakt=Kontakt
 EditWlascicielLabel_budynekId=BudynekId:
 EditWlascicielRequiredMessage_budynekId=The BudynekId field is required.
 EditWlascicielTitle_budynekId=BudynekId
+EditWlascicielLabel_imie=Imie:
+EditWlascicielRequiredMessage_imie=The Imie field is required.
+EditWlascicielTitle_imie=Imie
+EditWlascicielLabel_nazwisko=Nazwisko:
+EditWlascicielTitle_nazwisko=Nazwisko
 ViewWlascicielTitle=View
 ViewWlascicielDestroyLink=Destroy
 ViewWlascicielEditLink=Edit
@@ -462,6 +499,10 @@ ViewWlascicielLabel_kontakt=Kontakt:
 ViewWlascicielTitle_kontakt=Kontakt
 ViewWlascicielLabel_budynekId=BudynekId:
 ViewWlascicielTitle_budynekId=BudynekId
+ViewWlascicielLabel_imie=Imie:
+ViewWlascicielTitle_imie=Imie
+ViewWlascicielLabel_nazwisko=Nazwisko:
+ViewWlascicielTitle_nazwisko=Nazwisko
 ListWlascicielTitle=List
 ListWlascicielEmpty=(No Wlasciciel Items Found)
 ListWlascicielDestroyLink=Destroy
@@ -474,3 +515,5 @@ ListWlascicielTitle_login=Login
 ListWlascicielTitle_haslo=Haslo
 ListWlascicielTitle_kontakt=Kontakt
 ListWlascicielTitle_budynekId=BudynekId
+ListWlascicielTitle_imie=Imie
+ListWlascicielTitle_nazwisko=Nazwisko
