--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,7 +30,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.postgresql-9.4.1209.jar=C:\\Program Files\\NetBeans 8.2\\ide\\modules\\ext\\postgresql-9.4.1209.jar
+file.reference.postgresql-9.4.1209.jar=../../../../../Program Files/NetBeans 8.2/ide/modules/ext/postgresql-9.4.1209.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
