--- a/src/java/Bundle.properties
+++ b/src/java/Bundle.properties
@@ -372,6 +372,12 @@ CreateOplatyTitle_ogrzewanie=Ogrzewanie
 CreateOplatyLabel_media=Media:
 CreateOplatyRequiredMessage_media=The Media field is required.
 CreateOplatyTitle_media=Media
+CreateOplatyLabel_miesiac=Miesiac:
+CreateOplatyRequiredMessage_miesiac=The Miesiac field is required.
+CreateOplatyTitle_miesiac=Miesiac
+CreateOplatyLabel_rok=Rok:
+CreateOplatyRequiredMessage_rok=The Rok field is required.
+CreateOplatyTitle_rok=Rok
 CreateOplatyLabel_mieszkanieId=MieszkanieId:
 CreateOplatyRequiredMessage_mieszkanieId=The MieszkanieId field is required.
 CreateOplatyTitle_mieszkanieId=MieszkanieId
@@ -395,6 +401,12 @@ EditOplatyTitle_ogrzewanie=Ogrzewanie
 EditOplatyLabel_media=Media:
 EditOplatyRequiredMessage_media=The Media field is required.
 EditOplatyTitle_media=Media
+EditOplatyLabel_miesiac=Miesiac:
+EditOplatyRequiredMessage_miesiac=The Miesiac field is required.
+EditOplatyTitle_miesiac=Miesiac
+EditOplatyLabel_rok=Rok:
+EditOplatyRequiredMessage_rok=The Rok field is required.
+EditOplatyTitle_rok=Rok
 EditOplatyLabel_mieszkanieId=MieszkanieId:
 EditOplatyRequiredMessage_mieszkanieId=The MieszkanieId field is required.
 EditOplatyTitle_mieszkanieId=MieszkanieId
@@ -414,6 +426,10 @@ ViewOplatyLabel_ogrzewanie=Ogrzewanie:
 ViewOplatyTitle_ogrzewanie=Ogrzewanie
 ViewOplatyLabel_media=Media:
 ViewOplatyTitle_media=Media
+ViewOplatyLabel_miesiac=Miesiac:
+ViewOplatyTitle_miesiac=Miesiac
+ViewOplatyLabel_rok=Rok:
+ViewOplatyTitle_rok=Rok
 ViewOplatyLabel_mieszkanieId=MieszkanieId:
 ViewOplatyTitle_mieszkanieId=MieszkanieId
 ListOplatyTitle=List
@@ -428,6 +444,8 @@ ListOplatyTitle_czynsz=Czynsz
 ListOplatyTitle_wodaIScieki=WodaIScieki
 ListOplatyTitle_ogrzewanie=Ogrzewanie
 ListOplatyTitle_media=Media
+ListOplatyTitle_miesiac=Miesiac
+ListOplatyTitle_rok=Rok
 ListOplatyTitle_mieszkanieId=MieszkanieId
 WlascicielCreated=Wlasciciel was successfully created.
 WlascicielUpdated=Wlasciciel was successfully updated.
